# order-bits

./: .env  .gitignore  Cargo.toml  README.md  go.mod  inventory.db  main.go
api/database/: migrations.go  queries.go
api/handlers/: admin_handlers.go  component_handlers.go
api/models/: component.go
client/: .env.development  .env.production  package.json  rsbuild.config.ts
client/src/: App.tsx  NavBar.tsx  index.tsx
client/src/actions/: AddComponent.tsx  EditComponent.tsx  ListComponents.tsx  ViewComponent.tsx
client/src/forms/: Component.tsx  SearchInput.tsx
client/src/types/: Component.tsx
client/src/utils/: Formatters.tsx
database/: db.go  migrations.go  queries.go
handlers/: admin_handlers.go  component_handlers.go
migrations/: 01_create_components.sql
models/: component.go
response/: response.go
src/: main.rs
src/db/: filters.rs  mod.rs  mutations.rs  queries.rs
src/error/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
static/: index.html
